--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,109 @@
-/* @import 'reset.css'; */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Open Sans', sans-serif;
+}
 .header {
   display: flex;
   width: 100%;
   background-color: #f6f6f7;
   margin: 0px;
+  height: 25px;
   justify-content: flex-end;
+  align-items: center;
 }
 .cart {
   margin: 0px;
   margin-right: 15%;
   color: #888888;
+  font-size: 13px;
+}
+
+main {
+  display: flex;
+  margin-top: 2%;
+  width: 60%;
+  justify-content: space-around;
+}
+.classic_tee {
+  width: 410px;
+  height: 610px;
+}
+
+.details {
+  width: 35%;
+}
+
+.product_name {
+  display: block;
+  font-weight: 400;
+  font-size: x-large;
+  margin-top: 0;
+}
+
+hr {
+  border-top: 0.5px solid rgb(224, 224, 226);
+}
+
+.price {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.text {
+  color: #888888;
+  font-size: 14px;
+}
+
+.size_container {
+  display: flex;
+}
+
+.required_star {
+  color: #c90000;
+  font-size: 11px;
+  text-align: center;
+}
+.size_button_container {
+  width: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.size_button {
+  width: 35px;
+  height: 35px;
+  background: transparent;
+  color: #888888;
+  font-size: 11px;
+  cursor: pointer;
+  border: 0.5px solid rgb(224, 224, 226);
+}
+
+.add_to_cart_button {
+  width: 130px;
+  height: 40px;
+  margin-top: 14px;
+  background: transparent;
+  font-size: 13px;
+  color: rgb(19, 18, 18);
+  font-weight: 600;
+  border: 2px solid rgb(19, 18, 18);
+  transition: all 0.2s ease;
+}
+.add_to_cart_button:hover {
+  background-color: rgb(19, 18, 18);
+  color: white;
+  cursor: pointer;
+}
+
+#selected_size {
+  color: rgb(19, 18, 18);
+}
+.selected {
+  color: rgb(19, 18, 18);
+  border: 0.5px solid rgb(19, 18, 18);
 }
