--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
   margin: 0px;
   margin-right: 15%;
   color: #888888;
+  cursor: pointer;
   font-size: 13px;
 }
 
@@ -30,7 +31,6 @@ main {
 }
 .classic_tee {
   width: 410px;
-  height: 610px;
 }
 
 .details {
@@ -106,4 +106,22 @@ hr {
 .selected {
   color: rgb(19, 18, 18);
   border: 0.5px solid rgb(19, 18, 18);
+}
+
+@media screen and (max-width: 1024px) {
+  main {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 768px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+  .classic_tee {
+    width: 100%;
+  }
+  .details {
+    width: 100%;
+  }
 }
